--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -298,7 +298,8 @@
      "text": [
       "Iter :  0  Loss:  1330.5975128106102\n",
       "Iter :  500  Loss:  2106.930144718168\n",
-      "Iter :  1000  Loss:  2201.52384992054\n"
+      "Iter :  1000  Loss:  2201.52384992054\n",
+      "Iter :  1500  Loss:  2312.5423846920694\n"
      ]
     }
    ],
