Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -297,7 +297,8 @@
      "output_type": "stream",
      "text": [
       "Iter :  0  Loss:  1329.3052955386381\n",
-      "Iter :  500  Loss:  1347.1444587884416\n"
+      "Iter :  500  Loss:  1347.1444587884416\n",
+      "Iter :  1000  Loss:  1505.7075835798885\n"
      ]
     }
    ],
@@ -331,7 +332,7 @@
     "        grada = grad1a*g(b*layer1)\n",
     "        gradb = grad1a*a*g_grad(b*layer1)*layer1\n",
     "        gradc = grad1a\n",
-    "        grad1 = current_batch.T @(grad1a*a*g_grad(b*layer1)*b) - 3.5 * current_batch.T @ current_batch @ w1 \n",
+    "        grad1 = current_batch.T @(grad1a*a*g_grad(b*layer1)*b) - current_batch.T @ current_batch @ w1 \n",
     "\n",
     "        w2 = w2 - 0.000001  * grad2+ (1/(iter+1))*np.random.randn(expand_dim,1)\n",
     "        a = a -   0.000009    * grada.sum(0)+ (1/(iter+1))*np.random.randn(expand_dim)\n",
