--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -298,7 +298,8 @@
      "text": [
       "Iter :  0  Loss:  1370.291039759638\n",
       "Iter :  500  Loss:  1340.6272526388916\n",
-      "Iter :  1000  Loss:  2115.5365407420163\n"
+      "Iter :  1000  Loss:  2115.5365407420163\n",
+      "Iter :  1500  Loss:  2199.913373570721\n"
      ]
     }
    ],
