--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -296,7 +296,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iter :  0  Loss:  1335.3701851530022\n"
+      "Iter :  0  Loss:  1335.3701851530022\n",
+      "Iter :  500  Loss:  1530.2038663711944\n",
+      "Iter :  1000  Loss:  1932.4887399164058\n"
      ]
     }
    ],
