Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -298,7 +298,8 @@
      "text": [
       "Iter :  0  Loss:  1335.3701851530022\n",
       "Iter :  500  Loss:  1530.2038663711944\n",
-      "Iter :  1000  Loss:  1932.4887399164058\n"
+      "Iter :  1000  Loss:  1932.4887399164058\n",
+      "Iter :  1500  Loss:  1918.907716111533\n"
      ]
     }
    ],
