Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -297,7 +297,9 @@
      "output_type": "stream",
      "text": [
       "Iter :  0  Loss:  1422.2970249363743\n",
-      "Iter :  500  Loss:  1107.941860026967\n"
+      "Iter :  500  Loss:  1107.941860026967\n",
+      "Iter :  1000  Loss:  559.8462196948391\n",
+      "Iter :  1500  Loss:  608.2181963320888\n"
      ]
     }
    ],
