Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -297,7 +297,8 @@
      "output_type": "stream",
      "text": [
       "Iter :  0  Loss:  1507.3031305813674\n",
-      "Iter :  500  Loss:  1187.8732308864046\n"
+      "Iter :  500  Loss:  1187.8732308864046\n",
+      "Iter :  1000  Loss:  1503.5288986018397\n"
      ]
     }
    ],
