--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -1906,7 +1906,7 @@
     "        grada = grad1a*g(b*layer1)\n",
     "        gradb = grad1a*a*g_grad(b*layer1)*layer1\n",
     "        gradc = grad1a\n",
-    "        grad1 = 0.1 * current_batch.T @(grad1a*a*g_grad(b*layer1)*b) - current_batch.T @ current_batch @ w1 \n",
+    "        grad1 = 0.1 * current_batch.T @(grad1a*a*g_grad(b*layer1)*b) - 0.9*current_batch.T @ current_batch @ w1 \n",
     "\n",
     "\n",
     "        w2 = w2 - 0.0000001  * grad2+ (1/(iter+1))*np.random.randn(expand_dim,1)\n",
