Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -296,7 +296,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iter :  0  Loss:  1171.509771536546\n"
+      "Iter :  0  Loss:  1171.509771536546\n",
+      "Iter :  500  Loss:  940.7196701718857\n"
      ]
     }
    ],
