--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -298,7 +298,8 @@
      "text": [
       "Iter :  0  Loss:  1171.509771536546\n",
       "Iter :  500  Loss:  940.7196701718857\n",
-      "Iter :  1000  Loss:  1763.287887792469\n"
+      "Iter :  1000  Loss:  1763.287887792469\n",
+      "Iter :  1500  Loss:  1913.5788549080412\n"
      ]
     }
    ],
