--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -284,7 +284,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-04-10T02:07:20.699Z"
+     "start_time": "2019-04-10T02:08:50.175Z"
     },
     "code_folding": [
      62,
@@ -296,10 +296,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iter :  0  Loss:  1171.509771536546\n",
-      "Iter :  500  Loss:  940.7196701718857\n",
-      "Iter :  1000  Loss:  1763.287887792469\n",
-      "Iter :  1500  Loss:  1913.5788549080412\n"
+      "Iter :  0  Loss:  1377.5195877944498\n"
      ]
     }
    ],
@@ -336,11 +333,11 @@
     "        grad1 = 0.1 * current_batch.T @(grad1a*a*g_grad(b*layer1)*b) - 0.9*current_batch.T @ current_batch @ w1 \n",
     "\n",
     "\n",
-    "        w2 = w2 - 0.000001  * grad2+ (1/(iter+1))*np.random.randn(expand_dim,1)\n",
+    "        w2 = w2 - 0.00000001  * grad2+ (1/(iter+1))*np.random.randn(expand_dim,1)\n",
     "        a = a -   0.000009    * grada.sum(0)+ (1/(iter+1))*np.random.randn(expand_dim)\n",
     "        b = b -   0.000009    * gradb.sum(0)+ (1/(iter+1))*np.random.randn(expand_dim)\n",
     "        c = c -   0.0000009   * gradc.sum(0) + (1/(iter+1))*np.random.randn(expand_dim)\n",
-    "        w1 = w1 - 0.000001  * grad1+ (1/(iter+1))*np.random.randn(2,expand_dim)\n",
+    "        w1 = w1 - 0.00000001  * grad1+ (1/(iter+1))*np.random.randn(2,expand_dim)\n",
     "        \n",
     "        w1 = _sym_decorrelation(w1)\n",
     "        w2 = w2/(np.sqrt(np.sum(w2**2)))\n",
