--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -298,7 +298,8 @@
      "text": [
       "Iter :  0  Loss:  1392.978208746253\n",
       "Iter :  500  Loss:  857.6281741899758\n",
-      "Iter :  1000  Loss:  1154.2919222297057\n"
+      "Iter :  1000  Loss:  1154.2919222297057\n",
+      "Iter :  1500  Loss:  571.3461650577092\n"
      ]
     }
    ],
@@ -341,7 +342,7 @@
     "        c = c -   0.0000009   * gradc.sum(0) + (1/(iter+1))*np.random.randn(expand_dim)\n",
     "        w1 = w1 - 0.000000001  * grad1+ (1/(iter+1))*np.random.randn(2,expand_dim)\n",
     "        \n",
-    "        w1 = _sym_decorrelation(w1)\n",
+    "        #w1 = _sym_decorrelation(w1)\n",
     "        w2 = w2/(np.sqrt(np.sum(w2**2)))\n",
     "        a  = (a-a.mean())/a.std()\n",
     "        b  = (b-b.mean())/b.std()\n",
