--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -298,7 +298,8 @@
      "text": [
       "Iter :  0  Loss:  3054.570440127907\n",
       "Iter :  500  Loss:  104951.66709667268\n",
-      "Iter :  1000  Loss:  110992.38999798776\n"
+      "Iter :  1000  Loss:  110992.38999798776\n",
+      "Iter :  1500  Loss:  108289.9629590149\n"
      ]
     }
    ],
