Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -296,7 +296,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iter :  0  Loss:  44326.54127853376\n"
+      "Iter :  0  Loss:  44326.54127853376\n",
+      "Iter :  500  Loss:  4525568.512341591\n",
+      "Iter :  1000  Loss:  154410904512.18637\n"
      ]
     }
    ],
