Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -297,7 +297,9 @@
      "output_type": "stream",
      "text": [
       "Iter :  0  Loss:  51630.055577560444\n",
-      "Iter :  500  Loss:  286126.4131486863\n"
+      "Iter :  500  Loss:  286126.4131486863\n",
+      "Iter :  1000  Loss:  537461.8188476526\n",
+      "Iter :  1500  Loss:  1381963.4611928563\n"
      ]
     }
    ],
