Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -296,7 +296,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iter :  0  Loss:  204224.79834618748\n"
+      "Iter :  0  Loss:  204224.79834618748\n",
+      "Iter :  500  Loss:  630345.0493155553\n",
+      "Iter :  1000  Loss:  525474.9378152777\n"
      ]
     }
    ],
