Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -298,7 +298,8 @@
      "text": [
       "Iter :  0  Loss:  204224.79834618748\n",
       "Iter :  500  Loss:  630345.0493155553\n",
-      "Iter :  1000  Loss:  525474.9378152777\n"
+      "Iter :  1000  Loss:  525474.9378152777\n",
+      "Iter :  1500  Loss:  1095462.8409395574\n"
      ]
     }
    ],
