Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -297,7 +297,8 @@
      "output_type": "stream",
      "text": [
       "Iter :  0  Loss:  39393.33064237219\n",
-      "Iter :  500  Loss:  124823.72274593852\n"
+      "Iter :  500  Loss:  124823.72274593852\n",
+      "Iter :  1000  Loss:  202091.17704003677\n"
      ]
     }
    ],
