Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -296,7 +296,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iter :  0  Loss:  66401.21460253072\n"
+      "Iter :  0  Loss:  66401.21460253072\n",
+      "Iter :  500  Loss:  9806615.179558124\n"
      ]
     }
    ],
