Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -297,7 +297,9 @@
      "output_type": "stream",
      "text": [
       "Iter :  0  Loss:  66401.21460253072\n",
-      "Iter :  500  Loss:  9806615.179558124\n"
+      "Iter :  500  Loss:  9806615.179558124\n",
+      "Iter :  1000  Loss:  8812976.904353267\n",
+      "Iter :  1500  Loss:  9075318.648251278\n"
      ]
     }
    ],
