Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -1966,15 +1966,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 131,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-10T02:15:09.956967Z",
-     "start_time": "2019-04-10T02:15:09.951972Z"
+     "end_time": "2019-04-10T02:18:41.646801Z",
+     "start_time": "2019-04-10T02:18:41.640818Z"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.797, 3.022, 1.022])"
+      ]
+     },
+     "execution_count": 131,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
   },
   {
    "cell_type": "code",
