Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -1917,9 +1917,9 @@
     "        \n",
     "        w1 = _sym_decorrelation(w1)\n",
     "        w2 = w2/(np.sqrt(np.sum(w2**2)))\n",
-    "        a  = (a)/a.std()\n",
-    "        b  = (b)/b.std()\n",
-    "        c  = (c)/c.std()\n",
+    "#         a  = (a)/a.std()\n",
+    "#         b  = (b)/b.std()\n",
+    "#         c  = (c)/c.std()\n",
     "        cum_loss      = cum_loss + loss.mean()\n",
     "        \n",
     "    if iter%500==0:print('Iter : ',iter,\" Loss: \",cum_loss)\n",
@@ -1966,28 +1966,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-10T02:18:41.646801Z",
-     "start_time": "2019-04-10T02:18:41.640818Z"
+     "end_time": "2019-04-10T02:18:51.661920Z",
+     "start_time": "2019-04-10T02:18:51.656953Z"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.797, 3.022, 1.022])"
-      ]
-     },
-     "execution_count": 131,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
