Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -296,7 +296,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iter :  0  Loss:  31337.422942917015\n"
+      "Iter :  0  Loss:  31337.422942917015\n",
+      "Iter :  500  Loss:  83661.54715066894\n",
+      "Iter :  1000  Loss:  125282.53499906027\n",
+      "Iter :  1500  Loss:  210657.01911623322\n"
      ]
     }
    ],
