--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -284,7 +284,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-04-10T02:19:21.413Z"
+     "start_time": "2019-04-10T02:19:59.656Z"
     },
     "code_folding": [
      62,
@@ -296,10 +296,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iter :  0  Loss:  31337.422942917015\n",
-      "Iter :  500  Loss:  83661.54715066894\n",
-      "Iter :  1000  Loss:  125282.53499906027\n",
-      "Iter :  1500  Loss:  210657.01911623322\n"
+      "Iter :  0  Loss:  1382.7252762763928\n"
      ]
     }
    ],
@@ -333,7 +330,7 @@
     "        grada = grad1a*g(b*layer1)\n",
     "        gradb = grad1a*a*g_grad(b*layer1)*layer1\n",
     "        gradc = grad1a\n",
-    "        grad1 = current_batch.T @(grad1a*a*g_grad(b*layer1)*b) + current_batch.T @ current_batch @ w1 \n",
+    "        grad1 = current_batch.T @(grad1a*a*g_grad(b*layer1)*b) + (w1 + current_batch.T @ current_batch @ w1)\n",
     "\n",
     "        w2 = w2 - 0.000000001  * grad2+ (1/(iter+1))*np.random.randn(expand_dim,1)\n",
     "        a = a -   0.0000009    * grada.mean(0)+ (1/(iter+1))*np.random.randn(expand_dim)\n",
@@ -343,9 +340,9 @@
     "        \n",
     "        w1 = _sym_decorrelation(w1)\n",
     "        w2 = w2/(np.sqrt(np.sum(w2**2)))\n",
-    "#         a  = (a-a.mean())/a.std()\n",
-    "#         b  = (b-b.mean())/b.std()\n",
-    "#         c  = (c-c.mean())/c.std()\n",
+    "        a  = (a-a.mean())/a.std()\n",
+    "        b  = (b-b.mean())/b.std()\n",
+    "        c  = (c-c.mean())/c.std()\n",
     "        cum_loss      = cum_loss + loss.mean()\n",
     "        \n",
     "    if iter%500==0:print('Iter : ',iter,\" Loss: \",cum_loss)\n",
