Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -296,7 +296,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iter :  0  Loss:  1382.7252762763928\n"
+      "Iter :  0  Loss:  1382.7252762763928\n",
+      "Iter :  500  Loss:  514.8835442380972\n",
+      "Iter :  1000  Loss:  780.3345908514763\n"
      ]
     }
    ],
