--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -296,7 +296,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iter :  0  Loss:  1450.304152531393\n"
+      "Iter :  0  Loss:  1450.304152531393\n",
+      "Iter :  500  Loss:  1398.1079629914736\n",
+      "Iter :  1000  Loss:  1319.9341475578683\n"
      ]
     }
    ],
