--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -1901,12 +1901,12 @@
     "        layer2 = layer1a       @ w2\n",
     "        loss   = (w2.T @ layer1a.T @ layer1a @ w2).mean() + (w1.T @ current_batch.T @ current_batch @ w1).mean()\n",
     "        \n",
-    "        grad2 = w2 + layer1a.T @ layer1a @ w2 \n",
+    "        grad2 = -layer1a.T @ layer1a @ w2 \n",
     "        grad1a= -layer1a@w2@w2.T\n",
     "        grada = grad1a*g(b*layer1)\n",
     "        gradb = grad1a*a*g_grad(b*layer1)*layer1\n",
     "        gradc = grad1a\n",
-    "        grad1 = current_batch.T @(grad1a*a*g_grad(b*layer1)*b) + (w1 + current_batch.T @ current_batch @ w1)\n",
+    "        grad1 = current_batch.T @(grad1a*a*g_grad(b*layer1)*b) - current_batch.T @ current_batch @ w1 \n",
     "\n",
     "        w2 = w2 - 0.000000001  * grad2+ (1/(iter+1))*np.random.randn(expand_dim,1)\n",
     "        a = a -   0.0000009    * grada.mean(0)+ (1/(iter+1))*np.random.randn(expand_dim)\n",
@@ -1916,9 +1916,9 @@
     "        \n",
     "        w1 = _sym_decorrelation(w1)\n",
     "        w2 = w2/(np.sqrt(np.sum(w2**2)))\n",
-    "        a  = (a-a.mean())/a.std()\n",
-    "        b  = (b-b.mean())/b.std()\n",
-    "        c  = (c-c.mean())/c.std()\n",
+    "#         a  = (a-a.mean())/a.std()\n",
+    "#         b  = (b-b.mean())/b.std()\n",
+    "#         c  = (c-c.mean())/c.std()\n",
     "        cum_loss      = cum_loss + loss.mean()\n",
     "        \n",
     "    if iter%500==0:print('Iter : ',iter,\" Loss: \",cum_loss)\n",
