--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -1894,12 +1894,12 @@
     "    for mini_batch in range(0,len(X),mini_batch_size):\n",
     "        current_batch = temp_X[mini_batch:mini_batch+mini_batch_size]\n",
     "        \n",
-    "        layer1 = current_batch @ w1\n",
-    "        layer1 = layer1  + (1/(iter+1))*np.random.randn(mini_batch_size,expand_dim)\n",
-    "        layer1a= a*g(b*layer1)+c\n",
-    "        layer1a= layer1a + (1/(iter+1))*np.random.randn(mini_batch_size,expand_dim)\n",
-    "        layer2 = layer1a       @ w2\n",
-    "        loss   = (w2.T @ layer1a.T @ layer1a @ w2).mean() + (w1.T @ current_batch.T @ current_batch @ w1).mean()\n",
+    "        layer1  = current_batch @ w1\n",
+    "#         layer1  = layer1  + (1/(iter+1))*np.random.randn(mini_batch_size,expand_dim)\n",
+    "        layer1a = a*g(b*layer1)+c\n",
+    "#         layer1a = layer1a + (1/(iter+1))*np.random.randn(mini_batch_size,expand_dim)\n",
+    "        layer2  = layer1a       @ w2\n",
+    "        loss    = (w2.T @ layer1a.T @ layer1a @ w2).mean() + (w1.T @ current_batch.T @ current_batch @ w1).mean()\n",
     "        \n",
     "        grad2 = -layer1a.T @ layer1a @ w2 \n",
     "        grad1a= -layer1a@w2@w2.T\n",
