Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -297,7 +297,8 @@
      "output_type": "stream",
      "text": [
       "Iter :  0  Loss:  12754.83983902886\n",
-      "Iter :  500  Loss:  10273.135661810456\n"
+      "Iter :  500  Loss:  10273.135661810456\n",
+      "Iter :  1000  Loss:  10508.71075646355\n"
      ]
     }
    ],
