Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -284,7 +284,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-04-10T02:23:43.886Z"
+     "start_time": "2019-04-10T02:24:20.309Z"
     },
     "code_folding": [
      62,
@@ -296,9 +296,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iter :  0  Loss:  12754.83983902886\n",
-      "Iter :  500  Loss:  10273.135661810456\n",
-      "Iter :  1000  Loss:  10508.71075646355\n"
+      "Iter :  0  Loss:  797.754072785015\n"
      ]
     }
    ],
@@ -342,9 +340,9 @@
     "        \n",
     "        w1 = _sym_decorrelation(w1)\n",
     "        w2 = w2/(np.sqrt(np.sum(w2**2)))\n",
-    "#         a  = (a-a.mean())/a.std()\n",
-    "#         b  = (b-b.mean())/b.std()\n",
-    "#         c  = (c-c.mean())/c.std()\n",
+    "        a  = (a-a.mean())/a.std()\n",
+    "        b  = (b-b.mean())/b.std()\n",
+    "        c  = (c-c.mean())/c.std()\n",
     "        cum_loss      = cum_loss + loss.mean()\n",
     "        \n",
     "    if iter%500==0:print('Iter : ',iter,\" Loss: \",cum_loss)\n",
