Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -297,7 +297,9 @@
      "output_type": "stream",
      "text": [
       "Iter :  0  Loss:  25532.283619010424\n",
-      "Iter :  500  Loss:  47477.10697718879\n"
+      "Iter :  500  Loss:  47477.10697718879\n",
+      "Iter :  1000  Loss:  51729.72875907214\n",
+      "Iter :  1500  Loss:  112334.15637484819\n"
      ]
     }
    ],
