Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -297,7 +297,8 @@
      "output_type": "stream",
      "text": [
       "Iter :  0  Loss:  18974.768426703624\n",
-      "Iter :  500  Loss:  46648.963398465574\n"
+      "Iter :  500  Loss:  46648.963398465574\n",
+      "Iter :  1000  Loss:  23546.25566663379\n"
      ]
     }
    ],
