Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -296,7 +296,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iter :  0  Loss:  22240.389811746474\n"
+      "Iter :  0  Loss:  22240.389811746474\n",
+      "Iter :  500  Loss:  516660.9623045955\n",
+      "Iter :  1000  Loss:  1203671.3145127099\n"
      ]
     }
    ],
