--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -1878,7 +1878,7 @@
    ],
    "source": [
     "# with all scale\n",
-    "expand_dim = 3\n",
+    "expand_dim = 4\n",
     "w1 = np.random.randn(2,expand_dim)\n",
     "w2 = np.random.randn(expand_dim,1)\n",
     "a  = np.ones(expand_dim); b = np.ones(expand_dim); c = np.zeros(expand_dim)\n",
@@ -1939,25 +1939,25 @@
     "plt.scatter(projected_mine[y==1], np.zeros((len(projected_mine)//2)), color='blue', alpha=0.05)\n",
     "plt.show()\n",
     "\n",
-    "trace1 = go.Scatter3d(\n",
-    "    x=one_layer_project[y==0,0],\n",
-    "    y=one_layer_project[y==0,1],\n",
-    "    z=one_layer_project[y==0,2],\n",
-    "    mode='markers',\n",
-    "    line=dict(color='red',width=0.5),\n",
-    "    marker=dict(size=3,opacity=0.3)\n",
-    ")\n",
-    "trace2 = go.Scatter3d(\n",
-    "    x=one_layer_project[y==1,0],\n",
-    "    y=one_layer_project[y==1,1],\n",
-    "    z=one_layer_project[y==1,2],\n",
-    "    mode='markers',\n",
-    "    line=dict(color='blue',width=0.5),\n",
-    "    marker=dict(size=3,opacity=0.3)\n",
-    ")\n",
-    "data = [trace1,trace2]\n",
-    "fig  = go.Figure(data=data)\n",
-    "iplot(fig)"
+    "# trace1 = go.Scatter3d(\n",
+    "#     x=one_layer_project[y==0,0],\n",
+    "#     y=one_layer_project[y==0,1],\n",
+    "#     z=one_layer_project[y==0,2],\n",
+    "#     mode='markers',\n",
+    "#     line=dict(color='red',width=0.5),\n",
+    "#     marker=dict(size=3,opacity=0.3)\n",
+    "# )\n",
+    "# trace2 = go.Scatter3d(\n",
+    "#     x=one_layer_project[y==1,0],\n",
+    "#     y=one_layer_project[y==1,1],\n",
+    "#     z=one_layer_project[y==1,2],\n",
+    "#     mode='markers',\n",
+    "#     line=dict(color='blue',width=0.5),\n",
+    "#     marker=dict(size=3,opacity=0.3)\n",
+    "# )\n",
+    "# data = [trace1,trace2]\n",
+    "# fig  = go.Figure(data=data)\n",
+    "# iplot(fig)"
    ]
   },
   {
@@ -3665,7 +3665,7 @@
    ],
    "source": [
     "# with all scale\n",
-    "expand_dim = 3\n",
+    "expand_dim = 5\n",
     "w1 = np.random.randn(2,expand_dim)\n",
     "w2 = np.random.randn(expand_dim,2)\n",
     "\n",
