Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -372,7 +372,7 @@
     "\n",
     "plt.subplot(1, 3, 2,projection='3d')\n",
     "one_layer_project = (a*g(b*(X @ w1))+c)\n",
-    "# plt.scatter(one_layer_project[:,0],one_layer_project[:,1],one_layer_project[:,2], color='red')\n",
+    "plt.scatter(one_layer_project[:,0],one_layer_project[:,1],one_layer_project[:,2], color='red')\n",
     "\n",
     "plt.subplot(1, 3, 3)\n",
     "plt.scatter(projected_mine[y==0], np.zeros((len(projected_mine)//2)),  color='red', alpha=0.05)\n",
