--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -296,7 +296,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iter :  0  Loss:  814.4994660948967\n"
+      "Iter :  0  Loss:  814.4994660948967\n",
+      "Iter :  500  Loss:  285.589287257039\n",
+      "Iter :  1000  Loss:  409.18845094236207\n"
      ]
     }
    ],
@@ -2089,56 +2091,53 @@
    ],
    "source": [
     "# with all scale\n",
-    "expand_dim = 5\n",
+    "expand_dim = 3\n",
     "w1 = np.random.randn(2,expand_dim)\n",
-    "w2 = np.random.randn(expand_dim,2)\n",
-    "\n",
-    "a = np.ones(expand_dim)\n",
-    "b = np.ones(expand_dim)\n",
-    "c = np.zeros(expand_dim)\n",
-    "\n",
+    "w2 = np.random.randn(expand_dim,1)\n",
+    "a  = np.ones(expand_dim); b = np.ones(expand_dim); c = np.zeros(expand_dim)\n",
     "w1 = _sym_decorrelation(w1)\n",
-    "w2 = _sym_decorrelation(w2)\n",
+    "w2 = w2/(np.sqrt(np.sum(w2**2)))\n",
     "\n",
     "temp_X = np.copy(X)\n",
     "mini_batch_size = 10\n",
-    "for iter in range(5000):\n",
+    "for iter in range(2000):\n",
     "    cum_loss = 0; temp_X   = shuffle(temp_X)\n",
     "    \n",
     "    for mini_batch in range(0,len(X),mini_batch_size):\n",
     "        current_batch = temp_X[mini_batch:mini_batch+mini_batch_size]\n",
     "        \n",
-    "        layer1 = current_batch @ w1\n",
-    "        layer1a= a*g(b*layer1)+c\n",
-    "        layer1a= layer1a + (1/(iter+1))*np.random.randn(expand_dim)\n",
-    "        layer2 = layer1a       @ w2\n",
-    "        loss   = w2.T @ layer1a.T @ layer1a @ w2\n",
+    "        layer1  = current_batch @ w1\n",
+    "        layer1a = a*g(b*layer1)+c\n",
+    "        layer2  = layer1a       @ w2\n",
+    "        loss    = (w2.T @ layer1a.T @ layer1a @ w2).mean() + (w1.T @ current_batch.T @ current_batch @ w1).mean()\n",
     "        \n",
-    "        grad2 = -layer1a.T @ layer1a @ w2 \n",
-    "        grad1a= -layer1a@w2@w2.T\n",
+    "        grad2 = -2*layer1a.T @ layer1a @ w2 \n",
+    "        grad1a= -2*layer1a@w2@w2.T\n",
     "        grada = grad1a*g(b*layer1)\n",
     "        gradb = grad1a*a*g_grad(b*layer1)*layer1\n",
     "        gradc = grad1a\n",
-    "        grad1 = current_batch.T @(grad1a*a*g_grad(b*layer1)*b) - current_batch.T @ current_batch @ w1 \n",
+    "        grad1 = current_batch.T @(grad1a*a*g_grad(b*layer1)*b) - 2*current_batch.T @ current_batch @ w1 \n",
     "\n",
-    "        w2 = w2 - 0.000009 * grad2\n",
-    "        a = a -   0.000005 * grada.mean(0)\n",
-    "        b = b -   0.000005 * gradb.mean(0)\n",
-    "        c = c -   0.000005 * gradc.mean(0)\n",
-    "        w1 = w1 - 0.000009 * grad1\n",
+    "        w2 = w2 - 0.000000001  * grad2+ (1/(iter+1))*np.random.randn(expand_dim,1)\n",
+    "        a = a -   0.0000009    * grada.mean(0)+ (1/(iter+1))*np.random.randn(expand_dim)\n",
+    "        b = b -   0.0000009    * gradb.mean(0)+ (1/(iter+1))*np.random.randn(expand_dim)\n",
+    "        c = c -   0.00000009   * gradc.mean(0) + (1/(iter+1))*np.random.randn(expand_dim)\n",
+    "        w1 = w1 - 0.000000001  * grad1+ (1/(iter+1))*np.random.randn(2,expand_dim)\n",
     "        \n",
     "        w1 = _sym_decorrelation(w1)\n",
-    "        w2 = _sym_decorrelation(w2)\n",
+    "        w2 = w2/(np.sqrt(np.sum(w2**2)))\n",
+    "        a  = (a-a.mean())/a.std()\n",
+    "        b  = (b-b.mean())/b.std()\n",
+    "        c  = (c-c.mean())/c.std()\n",
     "        cum_loss      = cum_loss + loss.mean()\n",
     "        \n",
-    "    if iter%200==0:print('Iter : ',iter,\" Loss: \",cum_loss)\n",
+    "    if iter%500==0:print('Iter : ',iter,\" Loss: \",cum_loss)\n",
     "\n",
     "# projection\n",
     "projected_mine = (a*g(b*(X @ w1))+c) @ w2\n",
     "\n",
     "plt.figure(figsize=(20,5))\n",
     "plt.subplot(1, 3, 1)\n",
-    "# plt.scatter(X[:, 0], X[:,1], color='red', alpha=0.5)\n",
     "plt.scatter(X[y==0, 0], X[y==0, 1], color='red', alpha=0.5)\n",
     "plt.scatter(X[y==1, 0], X[y==1, 1], color='blue', alpha=0.5)\n",
     "plt.quiver(X.mean(0)[0], X.mean(0)[1], evector[0,0],evector[0,1], color=['b'], scale=2.5)\n",
@@ -2149,10 +2148,8 @@
     "plt.scatter(one_layer_project[:,0],one_layer_project[:,1],one_layer_project[:,2], color='red')\n",
     "\n",
     "plt.subplot(1, 3, 3)\n",
-    "# plt.scatter(projected_mine, np.zeros(len(projected_mine) ), color='red', alpha=0.5)\n",
-    "plt.scatter(projected_mine[y==0, 0], projected_mine[y==0, 1], color='red', alpha=0.5)\n",
-    "plt.scatter(projected_mine[y==1, 0], projected_mine[y==1, 1], color='blue', alpha=0.5)\n",
-    "\n",
+    "plt.scatter(projected_mine[y==0], np.zeros((len(projected_mine)//2)),  color='red', alpha=0.05)\n",
+    "plt.scatter(projected_mine[y==1], np.zeros((len(projected_mine)//2)), color='blue', alpha=0.05)\n",
     "plt.show()\n",
     "\n",
     "trace1 = go.Scatter3d(\n",
@@ -2163,7 +2160,6 @@
     "    line=dict(color='red',width=0.5),\n",
     "    marker=dict(size=3,opacity=0.3)\n",
     ")\n",
-    "\n",
     "trace2 = go.Scatter3d(\n",
     "    x=one_layer_project[y==1,0],\n",
     "    y=one_layer_project[y==1,1],\n",
