--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -3704,10 +3704,14 @@
     "        \n",
     "        m2 = m2 + 0.9*grad2\n",
     "        w2 = w2 - 0.000000001  * m2 + (1/(iter+1))*np.random.randn(expand_dim,1)\n",
+    "        \n",
+    "        ma = m1 + 0.9*grad1\n",
     "        a = a -   0.0000009    * grada.mean(0)+ (1/(iter+1))*np.random.randn(expand_dim)\n",
     "        b = b -   0.0000009    * gradb.mean(0)+ (1/(iter+1))*np.random.randn(expand_dim)\n",
     "        c = c -   0.00000009   * gradc.mean(0) + (1/(iter+1))*np.random.randn(expand_dim)\n",
-    "        w1 = w1 - 0.000000001  * grad1+ (1/(iter+1))*np.random.randn(2,expand_dim)\n",
+    "        \n",
+    "        m1 = m1 + 0.9*grad1\n",
+    "        w1 = w1 - 0.000000001  * m1+ (1/(iter+1))*np.random.randn(2,expand_dim)\n",
     "        \n",
     "        w1 = _sym_decorrelation(w1)\n",
     "        w2 = w2/(np.sqrt(np.sum(w2**2)))\n",
