Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -3705,9 +3705,13 @@
     "        m2 = m2 + 0.9*grad2\n",
     "        w2 = w2 - 0.000000001  * m2 + (1/(iter+1))*np.random.randn(expand_dim,1)\n",
     "        \n",
-    "        ma = m1 + 0.9*grad1\n",
-    "        a = a -   0.0000009    * grada.mean(0)+ (1/(iter+1))*np.random.randn(expand_dim)\n",
+    "        ma = ma + 0.9*grada\n",
+    "        a = a -   0.0000009    * ma.mean(0)+ (1/(iter+1))*np.random.randn(expand_dim)\n",
+    "        \n",
+    "        ma = ma + 0.9*grada\n",
     "        b = b -   0.0000009    * gradb.mean(0)+ (1/(iter+1))*np.random.randn(expand_dim)\n",
+    "        \n",
+    "        mc = m + 0.9*grada\n",
     "        c = c -   0.00000009   * gradc.mean(0) + (1/(iter+1))*np.random.randn(expand_dim)\n",
     "        \n",
     "        m1 = m1 + 0.9*grad1\n",
