Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -3708,11 +3708,11 @@
     "        ma = ma + 0.9*grada\n",
     "        a = a -   0.0000009    * ma.mean(0)+ (1/(iter+1))*np.random.randn(expand_dim)\n",
     "        \n",
-    "        ma = ma + 0.9*grada\n",
-    "        b = b -   0.0000009    * gradb.mean(0)+ (1/(iter+1))*np.random.randn(expand_dim)\n",
+    "        mb = mb + 0.9*gradb\n",
+    "        b = b -   0.0000009    * mb.mean(0)+ (1/(iter+1))*np.random.randn(expand_dim)\n",
     "        \n",
-    "        mc = m + 0.9*grada\n",
-    "        c = c -   0.00000009   * gradc.mean(0) + (1/(iter+1))*np.random.randn(expand_dim)\n",
+    "        mc = mc + 0.9*gradc\n",
+    "        c = c -   0.00000009   * mc.mean(0) + (1/(iter+1))*np.random.randn(expand_dim)\n",
     "        \n",
     "        m1 = m1 + 0.9*grad1\n",
     "        w1 = w1 - 0.000000001  * m1+ (1/(iter+1))*np.random.randn(2,expand_dim)\n",
