Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -2055,7 +2055,11 @@
    "metadata": {
     "ExecuteTime": {
      "start_time": "2019-04-10T02:37:36.479Z"
-    }
+    },
+    "code_folding": [
+     81,
+     89
+    ]
    },
    "outputs": [
     {
@@ -2063,7 +2067,8 @@
      "output_type": "stream",
      "text": [
       "Iter :  0  Loss:  682.8837136269279\n",
-      "Iter :  500  Loss:  2184.471814668238\n"
+      "Iter :  500  Loss:  2184.471814668238\n",
+      "Iter :  1000  Loss:  2250.2514691384054\n"
      ]
     }
    ],
