Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -2068,7 +2068,8 @@
      "text": [
       "Iter :  0  Loss:  682.8837136269279\n",
       "Iter :  500  Loss:  2184.471814668238\n",
-      "Iter :  1000  Loss:  2250.2514691384054\n"
+      "Iter :  1000  Loss:  2250.2514691384054\n",
+      "Iter :  1500  Loss:  2258.8204183665553\n"
      ]
     }
    ],
