Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -2066,7 +2066,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iter :  0  Loss:  730.2439088142406\n"
+      "Iter :  0  Loss:  730.2439088142406\n",
+      "Iter :  500  Loss:  2259.067044567418\n"
      ]
     }
    ],
@@ -2110,7 +2111,7 @@
     "        grad1 = current_batch.T @(grad1a*a*g_grad(b*layer1)*b) - 2*current_batch.T @ current_batch @ w1 \n",
     "        \n",
     "        m2 = m2 + 0.9*grad2\n",
-    "        w2 = w2 - 0.00000001  * m2 + (1/(iter+1))*np.random.randn(expand_dim,1)\n",
+    "        w2 = w2 - 0.0000001  * m2 + (1/(iter+1))*np.random.randn(expand_dim,1)\n",
     "        \n",
     "        ma = ma + 0.9*grada\n",
     "        a = a -   0.000009    * ma.mean(0) + (1/(iter+1))*np.random.randn(expand_dim)\n",
@@ -2122,7 +2123,7 @@
     "        c = c -   0.0000009   * mc.mean(0) + (1/(iter+1))*np.random.randn(expand_dim)\n",
     "        \n",
     "        m1 = m1 + 0.9*grad1\n",
-    "        w1 = w1 - 0.00000001  * m1 + (1/(iter+1))*np.random.randn(2,expand_dim)\n",
+    "        w1 = w1 - 0.0000001  * m1 + (1/(iter+1))*np.random.randn(2,expand_dim)\n",
     "        \n",
     "        w1 = _sym_decorrelation(w1)\n",
     "        w2 = w2/(np.sqrt(np.sum(w2**2)+1e-8))\n",
