Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -2067,7 +2067,9 @@
      "output_type": "stream",
      "text": [
       "Iter :  0  Loss:  730.2439088142406\n",
-      "Iter :  500  Loss:  2259.067044567418\n"
+      "Iter :  500  Loss:  2259.067044567418\n",
+      "Iter :  1000  Loss:  2299.544749066098\n",
+      "Iter :  1500  Loss:  2321.0017031699963\n"
      ]
     }
    ],
