Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -3695,19 +3695,19 @@
     "        grad1 = current_batch.T @(grad1a*a*g_grad(b*layer1)*b) - 2*current_batch.T @ current_batch @ w1 \n",
     "        \n",
     "        m2 = m2 + 0.9*grad2\n",
-    "        w2 = w2 - 0.000001  * m2 + (1/(iter+1))*         np.random.uniform(expand_dim,1)\n",
+    "        w2 = w2 - 0.000001  * m2 + (1/(iter+1))*         np.random.randn(expand_dim,1)\n",
     "        \n",
     "        ma = ma + 0.9*grada\n",
-    "        a = a -   0.00009    * ma.mean(0) + (1/(iter+1))*np.random.uniform(expand_dim)\n",
+    "        a = a -   0.00009    * ma.mean(0) + (1/(iter+1))*np.random.randn(expand_dim)\n",
     "        \n",
     "        mb = mb + 0.9*gradb\n",
-    "        b = b -   0.00009    * mb.mean(0) + (1/(iter+1))*np.random.uniform(expand_dim)\n",
+    "        b = b -   0.00009    * mb.mean(0) + (1/(iter+1))*np.random.randn(expand_dim)\n",
     "        \n",
     "        mc = mc + 0.9*gradc\n",
-    "        c = c -   0.000009   * mc.mean(0) + (1/(iter+1))*np.random.uniform(expand_dim)\n",
+    "        c = c -   0.000009   * mc.mean(0) + (1/(iter+1))*np.random.randn(expand_dim)\n",
     "        \n",
     "        m1 = m1 + 0.9*grad1\n",
-    "        w1 = w1 - 0.000001  * m1 + (1/(iter+1))*np.random.uniform(2,expand_dim)\n",
+    "        w1 = w1 - 0.000001  * m1 + (1/(iter+1))*np.random.randn(2,expand_dim)\n",
     "        \n",
     "        w1 = _sym_decorrelation(w1)\n",
     "        w2 = w2/(np.sqrt(np.sum(w2**2)+1e-8))\n",
