Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -3687,7 +3687,7 @@
     "        layer2  = layer1a       @ w2\n",
     "        loss    = (w2.T @ layer1a.T @ layer1a @ w2).mean() + (w1.T @ current_batch.T @ current_batch @ w1).mean()\n",
     "        \n",
-    "        grad2 = -2*layer1a.T @ layer1a @ w2 \n",
+    "        grad2 = (np.eye(1)+)\n",
     "        grad1a= -2*layer1a@w2@w2.T\n",
     "        grada = grad1a*g(b*layer1)\n",
     "        gradb = grad1a*a*g_grad(b*layer1)*layer1\n",
