Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -2066,7 +2066,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iter :  0  Loss:  835.0946971269525\n"
+      "Iter :  0  Loss:  835.0946971269525\n",
+      "Iter :  500  Loss:  1221.3969944182122\n"
      ]
     }
    ],
