--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -3688,16 +3688,16 @@
     "        w2 = w2 - 0.000001  * m2 + (1/(iter+1))*         np.random.randn(expand_dim,1)\n",
     "        \n",
     "        ma = ma + 0.9*grada\n",
-    "        a = a -   0.00009    * ma.mean(0) + (1/(iter+1))*np.random.randn(expand_dim)\n",
+    "        a = a -   0.00009    * ma.mean(0)\n",
     "        \n",
     "        mb = mb + 0.9*gradb\n",
-    "        b = b -   0.00009    * mb.mean(0) + (1/(iter+1))*np.random.randn(expand_dim)\n",
+    "        b = b -   0.00009    * mb.mean(0) \n",
     "        \n",
     "        mc = mc + 0.9*gradc\n",
-    "        c = c -   0.000009   * mc.mean(0) + (1/(iter+1))*np.random.randn(expand_dim)\n",
+    "        c = c -   0.000009   * mc.mean(0) \n",
     "        \n",
     "        m1 = m1 + 0.9*grad1\n",
-    "        w1 = w1 - 0.000001  * m1 + (1/(iter+1))*np.random.randn(2,expand_dim)\n",
+    "        w1 = w1 - 0.000001  * m1 \n",
     "        \n",
     "        w1 = _sym_decorrelation(w1)\n",
     "        w2 = w2/(np.sqrt(np.sum(w2**2)+1e-8))\n",
@@ -3750,28 +3750,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-04-10T02:45:41.520280Z",
      "start_time": "2019-04-10T02:45:41.514303Z"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([-0.,  0.])"
-      ]
-     },
-     "execution_count": 162,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X.mean(0)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
