Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -2067,7 +2067,9 @@
      "output_type": "stream",
      "text": [
       "Iter :  0  Loss:  880.1201945908111\n",
-      "Iter :  500  Loss:  2149.493107448818\n"
+      "Iter :  500  Loss:  2149.493107448818\n",
+      "Iter :  1000  Loss:  1626.2439275899937\n",
+      "Iter :  1500  Loss:  2003.8794593979858\n"
      ]
     }
    ],
