Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -2066,7 +2066,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iter :  0  Loss:  1592.7917676632185\n"
+      "Iter :  0  Loss:  1592.7917676632185\n",
+      "Iter :  500  Loss:  2280.054103162529\n",
+      "Iter :  1000  Loss:  2289.6678411395055\n",
+      "Iter :  1500  Loss:  2295.6331757744165\n"
      ]
     }
    ],
