Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -2099,7 +2099,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iter :  0  Loss:  319.69504144397695\n"
+      "Iter :  0  Loss:  319.69504144397695\n",
+      "Iter :  500  Loss:  2087.6415262906494\n",
+      "Iter :  1000  Loss:  2114.827405852624\n"
      ]
     }
    ],
