--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -3872,7 +3872,107 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# with all scale\n",
+    "expand_dim = 3\n",
+    "w1 = np.random.randn(2,expand_dim)\n",
+    "m1 = np.zeros_like(w1)\n",
+    "w2 = np.random.randn(expand_dim,1)\n",
+    "m2 = np.zeros_like(w2)\n",
+    "\n",
+    "a  = np.ones(expand_dim); \n",
+    "ma = np.zeros_like(a)\n",
+    "b  = np.ones(expand_dim); \n",
+    "mb = np.zeros_like(b)\n",
+    "c  = np.zeros(expand_dim)\n",
+    "mc = np.zeros_like(c)\n",
+    "\n",
+    "w1 = _sym_decorrelation(w1)\n",
+    "w2 = w2/(np.sqrt(np.sum(w2**2))+1e-8)\n",
+    "\n",
+    "temp_X = np.copy(X); mini_batch_size = 10\n",
+    "\n",
+    "for iter in range(2000):\n",
+    "    cum_loss = 0; temp_X   = shuffle(temp_X)\n",
+    "    \n",
+    "    for mini_batch in range(0,len(X),mini_batch_size):\n",
+    "        current_batch = temp_X[mini_batch:mini_batch+mini_batch_size]\n",
+    "        \n",
+    "        layer1  = current_batch @ w1 \n",
+    "        layer1a = a*g(b*layer1)+c\n",
+    "        layer2  = layer1a       @ w2 \n",
+    "        loss    = (w2.T @ layer1a.T @ layer1a @ w2).mean() + (w1.T @ current_batch.T @ current_batch @ w1).mean()\n",
+    "        \n",
+    "        grad2 = -2*layer1a.T@layer1a @ w2 \n",
+    "        grad1a= -2*layer1a@w2@w2.T\n",
+    "        grada = grad1a*g(b*layer1)\n",
+    "        gradb = grad1a*a*g_grad(b*layer1)*layer1\n",
+    "        gradc = grad1a\n",
+    "        grad1 = current_batch.T @(grad1a*a*g_grad(b*layer1)*b) - 2*current_batch.T @ current_batch @ w1 \n",
+    "        \n",
+    "        m2 = m2 + 0.9*grad2\n",
+    "        w2 = w2 - 0.000001  * m2 \n",
+    "        \n",
+    "        ma = ma + 0.9*grada\n",
+    "        a  = a -   0.00009   * ma.mean(0)\n",
+    "        \n",
+    "        mb = mb + 0.9*gradb\n",
+    "        b  = b -   0.00009   * mb.mean(0) \n",
+    "        \n",
+    "        mc = mc + 0.9*gradc\n",
+    "        c  = c -   0.00009   * mc.mean(0) \n",
+    "        \n",
+    "        m1 = m1 + 0.9*grad1\n",
+    "        w1 = w1 - 0.000001  * m1 \n",
+    "        \n",
+    "        w1 = _sym_decorrelation(w1)\n",
+    "        w2 = w2/(np.sqrt(np.sum(w2**2)+1e-8))\n",
+    "        a  = (a-a.mean())/a.std()\n",
+    "        b  = (b-b.mean())/b.std()\n",
+    "        c  = (c-c.mean())/c.std()\n",
+    "        cum_loss = cum_loss + loss.mean()\n",
+    "        \n",
+    "    if iter%500==0:print('Iter : ',iter,\" Loss: \",cum_loss)\n",
+    "\n",
+    "# projection\n",
+    "projected_mine = (a*g(b*(X @ w1))+c) @ w2\n",
+    "\n",
+    "plt.figure(figsize=(20,5))\n",
+    "plt.subplot(1, 3, 1)\n",
+    "plt.scatter(X[y==0, 0], X[y==0, 1], color='red', alpha=0.5)\n",
+    "plt.scatter(X[y==1, 0], X[y==1, 1], color='blue', alpha=0.5)\n",
+    "plt.quiver(X.mean(0)[0], X.mean(0)[1], evector[0,0],evector[0,1], color=['b'], scale=2.5)\n",
+    "plt.quiver(X.mean(0)[0], X.mean(0)[1], evector[1,0],evector[1,1], color=['g'], scale=2.5)\n",
+    "\n",
+    "plt.subplot(1, 3, 2,projection='3d')\n",
+    "one_layer_project = (a*g(b*(X @ w1))+c)\n",
+    "plt.scatter(one_layer_project[:,0],one_layer_project[:,1],one_layer_project[:,2], color='red')\n",
+    "\n",
+    "plt.subplot(1, 3, 3)\n",
+    "plt.scatter(projected_mine[y==0], np.zeros((len(projected_mine)//2)),  color='red', alpha=0.05)\n",
+    "plt.scatter(projected_mine[y==1], np.zeros((len(projected_mine)//2)), color='blue', alpha=0.05)\n",
+    "plt.show()\n",
+    "\n",
+    "trace1 = go.Scatter3d(\n",
+    "    x=one_layer_project[y==0,0],\n",
+    "    y=one_layer_project[y==0,1],\n",
+    "    z=one_layer_project[y==0,2],\n",
+    "    mode='markers',\n",
+    "    line=dict(color='red',width=0.5),\n",
+    "    marker=dict(size=3,opacity=0.3)\n",
+    ")\n",
+    "trace2 = go.Scatter3d(\n",
+    "    x=one_layer_project[y==1,0],\n",
+    "    y=one_layer_project[y==1,1],\n",
+    "    z=one_layer_project[y==1,2],\n",
+    "    mode='markers',\n",
+    "    line=dict(color='blue',width=0.5),\n",
+    "    marker=dict(size=3,opacity=0.3)\n",
+    ")\n",
+    "data = [trace1,trace2]\n",
+    "fig  = go.Figure(data=data)\n",
+    "iplot(fig)"
+   ]
   },
   {
    "cell_type": "code",
