Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -3870,20 +3870,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "code_folding": [
+     80,
+     88
+    ]
+   },
    "outputs": [],
    "source": [
     "# with all scale\n",
     "expand_dim = 3\n",
     "w1 = np.random.randn(2,expand_dim)\n",
-    "m1 = np.zeros_like(w1)\n",
     "w2 = np.random.randn(expand_dim,1)\n",
-    "m2 = np.zeros_like(w2)\n",
     "\n",
     "a  = np.ones(expand_dim); \n",
-    "ma = np.zeros_like(a)\n",
     "b  = np.ones(expand_dim); \n",
-    "mb = np.zeros_like(b)\n",
     "c  = np.zeros(expand_dim)\n",
     "mc = np.zeros_like(c)\n",
     "\n",
@@ -3901,6 +3902,9 @@
     "        layer1  = current_batch @ w1 \n",
     "        layer1a = a*g(b*layer1)+c\n",
     "        layer2  = layer1a       @ w2 \n",
+    "        \n",
+    "        \n",
+    "        \n",
     "        loss    = (w2.T @ layer1a.T @ layer1a @ w2).mean() + (w1.T @ current_batch.T @ current_batch @ w1).mean()\n",
     "        \n",
     "        grad2 = -2*layer1a.T@layer1a @ w2 \n",
