Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -3869,14 +3869,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 185,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-04-10T02:56:39.508280Z",
+     "start_time": "2019-04-10T02:56:39.482824Z"
+    },
     "code_folding": [
      80,
      88
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-185-eda5c4c34b45>, line 20)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-185-eda5c4c34b45>\"\u001b[1;36m, line \u001b[1;32m20\u001b[0m\n\u001b[1;33m    sys.exit()\u001b[0m\n\u001b[1;37m      ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "# with all scale\n",
     "expand_dim = 3\n",
@@ -3896,7 +3909,7 @@
     "w2 = _sym_decorrelation(w2)\n",
     "w3 = w3/(np.sqrt(np.sum(w3**2))+1e-8)\n",
     "\n",
-    "print()\n",
+    "print((np.sqrt(np.sum(w1**2,0)))\n",
     "sys.exit()\n",
     "\n",
     "temp_X = np.copy(X); mini_batch_size = 10\n",
