--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -3869,11 +3869,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 186,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-10T02:56:39.508280Z",
-     "start_time": "2019-04-10T02:56:39.482824Z"
+     "end_time": "2019-04-10T02:56:47.777003Z",
+     "start_time": "2019-04-10T02:56:47.747086Z"
     },
     "code_folding": [
      80,
@@ -3882,11 +3882,29 @@
    },
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-185-eda5c4c34b45>, line 20)",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.757 0.707 0.955]\n"
+     ]
+    },
+    {
+     "ename": "SystemExit",
+     "evalue": "",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-185-eda5c4c34b45>\"\u001b[1;36m, line \u001b[1;32m20\u001b[0m\n\u001b[1;33m    sys.exit()\u001b[0m\n\u001b[1;37m      ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[1;31mSystemExit\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Miniconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3275: UserWarning:\n",
+      "\n",
+      "To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "\n"
      ]
     }
    ],
@@ -3909,7 +3927,7 @@
     "w2 = _sym_decorrelation(w2)\n",
     "w3 = w3/(np.sqrt(np.sum(w3**2))+1e-8)\n",
     "\n",
-    "print((np.sqrt(np.sum(w1**2,0)))\n",
+    "print((np.sqrt(np.sum(w1**2,0))))\n",
     "sys.exit()\n",
     "\n",
     "temp_X = np.copy(X); mini_batch_size = 10\n",
