Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -3928,6 +3928,9 @@
     "w3 = w3/(np.sqrt(np.sum(w3**2))+1e-8)\n",
     "\n",
     "print((np.sqrt(np.sum(w1**2,0))))\n",
+    "print((np.sqrt(np.sum(w2**2,0))))\n",
+    "print((np.sqrt(np.sum(w1**2,0))))\n",
+    "\n",
     "sys.exit()\n",
     "\n",
     "temp_X = np.copy(X); mini_batch_size = 10\n",
