Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -4014,28 +4014,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 193,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-10T02:57:57.798950Z",
-     "start_time": "2019-04-10T02:57:57.793928Z"
+     "end_time": "2019-04-10T02:58:19.430266Z",
+     "start_time": "2019-04-10T02:58:19.424281Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.737, 0.218, 0.036],\n",
-       "       [0.162, 0.752, 0.066]])"
+       "array([[-0.859,  0.467,  0.19 ],\n",
+       "       [-0.403, -0.867,  0.258]])"
       ]
      },
-     "execution_count": 189,
+     "execution_count": 193,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.w1**2"
+    "np.sum(w1**2,1)\n",
+    "w1"
    ]
   },
   {
