Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -3869,11 +3869,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 194,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-10T02:57:22.501950Z",
-     "start_time": "2019-04-10T02:57:22.470035Z"
+     "end_time": "2019-04-10T02:58:39.737310Z",
+     "start_time": "2019-04-10T02:58:39.704870Z"
     },
     "code_folding": [
      80,
@@ -3885,8 +3885,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.948 0.985 0.32 ]\n",
-      "[0.995 0.993 0.998]\n",
+      "[0.994 0.999]\n",
+      "[0.993 0.992 0.996]\n",
       "[1.]\n"
      ]
     },
@@ -3915,8 +3915,8 @@
     "b2  = np.ones(expand_dim); \n",
     "c2  = np.zeros(expand_dim)\n",
     "\n",
-    "w1 = _sym_decorrelation(w1)\n",
-    "w2 = _sym_decorrelation(w2)\n",
+    "w1 = _sym_decorrelation(w1.T)\n",
+    "w2 = _sym_decorrelation(w2.T)\n",
     "w3 = w3/(np.sqrt(np.sum(w3**2))+1e-8)\n",
     "\n",
     "print((np.sqrt(np.sum(w1**2,0))))\n",
