Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -4014,28 +4014,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 195,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-10T02:58:19.430266Z",
-     "start_time": "2019-04-10T02:58:19.424281Z"
+     "end_time": "2019-04-10T02:58:53.963645Z",
+     "start_time": "2019-04-10T02:58:53.958632Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[-0.859,  0.467,  0.19 ],\n",
-       "       [-0.403, -0.867,  0.258]])"
+       "array([[ 0.732, -0.674],\n",
+       "       [-0.048,  0.029],\n",
+       "       [-0.671, -0.737]])"
       ]
      },
-     "execution_count": 193,
+     "execution_count": 195,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.sum(w1**2,1)\n",
+    "np.sum(w1**2,0)\n",
     "w1"
    ]
   },
