Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -3908,8 +3908,8 @@
     "b2  = np.ones(expand_dim); \n",
     "c2  = np.zeros(expand_dim)\n",
     "\n",
-    "w1.T = _sym_decorrelation(w1.T)\n",
-    "w2.T = _sym_decorrelation(w2.T)\n",
+    "w1 = _sym_decorrelation(w1)\n",
+    "w2 = _sym_decorrelation(w2)\n",
     "w3 = w3/(np.sqrt(np.sum(w3**2))+1e-8)\n",
     "\n",
     "print((np.sqrt(np.sum(w1**2,0))))\n",
