Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -4027,7 +4027,14 @@
     }
    ],
    "source": [
-    "np.sum(w1.T**2,0)\n"
+    "w1 = np.random.randn(2,expand_dim)\n",
+    "w2 = np.random.randn(expand_dim,expand_dim)\n",
+    "w3 = np.random.randn(expand_dim,1)\n",
+    "\n",
+    "\n",
+    "w1 = _sym_decorrelation(w1)\n",
+    "w2 = _sym_decorrelation(w2)\n",
+    "w3 = w3/(np.sqrt(np.sum(w3**2))+1e-8)"
    ]
   },
   {
