Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -4007,23 +4007,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 204,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-10T02:59:26.094955Z",
-     "start_time": "2019-04-10T02:59:26.089968Z"
+     "end_time": "2019-04-10T03:00:40.995238Z",
+     "start_time": "2019-04-10T03:00:40.986261Z"
     }
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([2.769, 0.403])"
-      ]
-     },
-     "execution_count": 201,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-1.662 -0.498]\n",
+      " [-0.248 -1.581]\n",
+      " [ 0.986  1.077]\n",
+      " [-0.641 -0.389]\n",
+      " [ 1.936  0.102]\n",
+      " [-0.48  -0.169]\n",
+      " [ 1.196  1.187]\n",
+      " [-0.496 -0.163]\n",
+      " [ 0.536 -0.525]\n",
+      " [ 1.676 -0.231]]\n",
+      "[[-0.798  0.27   0.534]\n",
+      " [ 0.405  0.124  0.618]]\n",
+      "[[-0.712 -0.024  0.657]\n",
+      " [ 0.281 -0.851  0.246]\n",
+      " [ 0.626  0.358  0.68 ]]\n",
+      "[[0.9  ]\n",
+      " [0.291]\n",
+      " [0.324]]\n"
+     ]
     }
    ],
    "source": [
@@ -4031,10 +4045,14 @@
     "w2 = np.random.randn(expand_dim,expand_dim)\n",
     "w3 = np.random.randn(expand_dim,1)\n",
     "\n",
-    "\n",
     "w1 = _sym_decorrelation(w1)\n",
     "w2 = _sym_decorrelation(w2)\n",
-    "w3 = w3/(np.sqrt(np.sum(w3**2))+1e-8)"
+    "w3 = w3/(np.sqrt(np.sum(w3**2))+1e-8)\n",
+    "\n",
+    "print(current_batch)\n",
+    "print(w1)\n",
+    "print(w2)\n",
+    "print(w3)"
    ]
   },
   {
