Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -4007,11 +4007,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 206,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-10T03:00:40.995238Z",
-     "start_time": "2019-04-10T03:00:40.986261Z"
+     "end_time": "2019-04-10T03:00:58.546335Z",
+     "start_time": "2019-04-10T03:00:58.537376Z"
     }
    },
    "outputs": [
@@ -4029,14 +4029,15 @@
       " [-0.496 -0.163]\n",
       " [ 0.536 -0.525]\n",
       " [ 1.676 -0.231]]\n",
-      "[[-0.798  0.27   0.534]\n",
-      " [ 0.405  0.124  0.618]]\n",
-      "[[-0.712 -0.024  0.657]\n",
-      " [ 0.281 -0.851  0.246]\n",
-      " [ 0.626  0.358  0.68 ]]\n",
-      "[[0.9  ]\n",
-      " [0.291]\n",
-      " [0.324]]\n"
+      "[[ 0.934 -0.151  0.31 ]\n",
+      " [ 0.161 -0.593 -0.787]]\n",
+      "[[ 0.143 -0.947  0.056]\n",
+      " [ 0.738  0.264  0.404]\n",
+      " [ 0.44   0.016 -0.883]]\n",
+      "[[-0.696]\n",
+      " [-0.375]\n",
+      " [ 0.612]]\n",
+      "[-4.818 -5.24   5.202 -2.448  4.177 -1.467  5.951 -1.481 -0.505  2.659]\n"
      ]
     }
    ],
@@ -4052,7 +4053,8 @@
     "print(current_batch)\n",
     "print(w1)\n",
     "print(w2)\n",
-    "print(w3)"
+    "print(w3)\n",
+    "print(current_batch@w1.shape)"
    ]
   },
   {
