Super important commit

--- a/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
+++ b/sandbox full of trash/PCA via gradient 2/5.. make moon regression.ipynb
@@ -4007,11 +4007,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 209,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-04-10T03:00:58.546335Z",
-     "start_time": "2019-04-10T03:00:58.537376Z"
+     "end_time": "2019-04-10T03:01:20.188717Z",
+     "start_time": "2019-04-10T03:01:20.179740Z"
     }
    },
    "outputs": [
@@ -4029,15 +4029,15 @@
       " [-0.496 -0.163]\n",
       " [ 0.536 -0.525]\n",
       " [ 1.676 -0.231]]\n",
-      "[[ 0.934 -0.151  0.31 ]\n",
-      " [ 0.161 -0.593 -0.787]]\n",
-      "[[ 0.143 -0.947  0.056]\n",
-      " [ 0.738  0.264  0.404]\n",
-      " [ 0.44   0.016 -0.883]]\n",
-      "[[-0.696]\n",
-      " [-0.375]\n",
-      " [ 0.612]]\n",
-      "[-4.818 -5.24   5.202 -2.448  4.177 -1.467  5.951 -1.481 -0.505  2.659]\n"
+      "[[-0.766 -0.633 -0.006]\n",
+      " [ 0.561 -0.728  0.28 ]]\n",
+      "[[ 0.519  0.029  0.8  ]\n",
+      " [-0.32   0.906  0.08 ]\n",
+      " [ 0.787  0.319 -0.519]]\n",
+      "[[-0.536]\n",
+      " [-0.585]\n",
+      " [-0.608]]\n",
+      "(10, 3)\n"
      ]
     }
    ],
@@ -4046,7 +4046,7 @@
     "w2 = np.random.randn(expand_dim,expand_dim)\n",
     "w3 = np.random.randn(expand_dim,1)\n",
     "\n",
-    "w1 = _sym_decorrelation(w1)\n",
+    "w1 = _sym_decorrelation(w1.T).T\n",
     "w2 = _sym_decorrelation(w2)\n",
     "w3 = w3/(np.sqrt(np.sum(w3**2))+1e-8)\n",
     "\n",
@@ -4054,7 +4054,7 @@
     "print(w1)\n",
     "print(w2)\n",
     "print(w3)\n",
-    "print(current_batch@w1.shape)"
+    "print((current_batch@w1).shape)"
    ]
   },
   {
